# imalink-schemas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/imalink_schemas/: __init__.py  base.py  enums.py  image_file.py  photo.py  version.py
src/imalink_schemas/codegen/: __init__.py  export_json_schema.py
tests/: test_photo_schemas.py
