[project]
name = "imalink-schemas"
version = "3.0.0"
description = "Shared Pydantic schemas for ImaLink ecosystem (backend, core, desktop, web)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kjell Kolstad", email = "kjell@trollfjell.com" }
]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

codegen = [
    "datamodel-code-generator>=0.25.0",  # For TypeScript generation
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imalink_schemas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
